@@ -4,6 +4,8 @@ cfg = {
     [ "botdesc" ] = "Announcer Client",
     [ "botshare" ] = 0,
     [ "botslots" ] = 0,
+    [ "freshstuff_version" ] = false,
+    [ "logfilesize" ] = 2097152,
     [ "sleeptime" ] = 10,
     [ "sockettimeout" ] = 60,
     [ "trayicon" ] = false,
